# Python-Data-Projects

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conda-lock-dev.yml  conda-lock.yml  env-dev.yml  env.yml  main_zajecia04.py  main_zajecia05.py  main_zajecia06.py  pyproject.toml  run_python1course.py
.github/workflows/: release.yml
AB/: project.ipynb
AB/.ipynb_checkpoints/: project-checkpoint.ipynb
Car-Price-Prediction/: zadanie.ipynb
Car-Price-Prediction/.ipynb_checkpoints/: zadanie-checkpoint.ipynb
advertising_campaign_analysis/: analysis.py
marketing-campaign-analysis/: analysis.ipynb
python1course.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python1course/zaj01/: __init__.py  skrypt1.py  skrypt2.py  skrypt3.py  skrypt4.py  skrypt5.py  teksty.json
python1course/zaj02_03/zaj03/: funkcje1.py  funkcje2.py  funkcje3.py  funkcje4.py  funkcjea1.py  funkcjea2.py  funkcjea3.py  listy1.py  listy2.py  listy3.py  listy4.py  listy5.py  petle1.py  petle2.py  petle3.py
python1course/zaj04/: __init__.py
python1course/zaj04/fleet/: __init__.py  ambulance.py  station.py
python1course/zaj04/operations/: __init__.py  incident.py  incident_manager.py  incident_queue.py
python1course/zaj04/personnel/: __init__.py  driver.py  employee.py
python1course/zaj05/fibonacci/: fibonacci_iterator.py
python1course/zaj05/file_lock/: file_lock.py
python1course/zaj05/generatory/: days_generator.py
python1course/zaj06/: cinema.py  dekorator.py
python1course/zaj07/: example.py
python1course/zaj07/utils/: logging.py
tests/tests/: conftest.py
tests/tests/e2e/: test_cinema_workflow.py
tests/tests/unit/: test_cinema.py
